Fixed flickering with view switching, misc styles

--- a/src/components/LogIn.css
+++ b/src/components/LogIn.css
@@ -14,6 +14,7 @@
   height: 50px;
   font-size: 30px;
   font-family: inherit;
+  cursor: pointer;
 }
 
 .textField{
